Add border to icon

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -28,6 +28,7 @@ table.practices
     img
       border-radius: 50%
       margin-left: 3px
+      border: 5px solid #ddd
   .status
     width: 210px
     text-align: right
@@ -46,6 +47,7 @@ table.practices
       width: 64px
       height: 64px
       border-radius: 50%
+      border: 5px solid #ddd
   .login-name
     margin-left: 50px
   .panel-body
