--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,3 +1,9 @@
-@import bootstrap.css
-@import shadow
+@import settings/variables/*
+
+@import oulu
+@import bootstrap-import
+
+@import settings/helpers/**/*
+@import settings/costom-bootstrap//**/*
 @import base
+@import blocks/**/*
