--- a/app/views/admin/categories/edit.html.slim
+++ b/app/views/admin/categories/edit.html.slim
@@ -1,2 +1,7 @@
-h3= t('editing_category')
-= render 'form', category: @category
+header.page-header
+  .container
+    h1.page-header__title= t('editing_category')
+
+.page-body
+  .container
+    = render 'form', category: @category
