--- a/app/views/admin/home/index.html.slim
+++ b/app/views/admin/home/index.html.slim
@@ -1,1 +1,7 @@
-h3= t('admin_index')
+header.page-header
+  .container
+    h2.page-header__title
+      = t('admin_index')
+
+.page-body
+  .container
