--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,9 +1,13 @@
-- users.each do |user|
-  .col-sm-4.col-xs-12
-    .user.panel.panel-primary(class="#{user.active? ? 'active' : 'inactive'}")
-      .panel-heading
-        .login-name= link_to user.login_name, user
-        .icon= link_to user do
-          = gravatar_tag user
-      .panel-body
-        .description= simple_format truncate(user.description, length: 100)
+.row
+  - users.each do |user|
+    .col-sm-4.col-xs-12
+      .card.users-item(class="#{user.active? ? 'active' : 'inactive'}")
+        header.card-header.users-item__header
+          .users-item__header-container
+            .users-item__name
+              = link_to user.login_name, user, class: "users-item__name-link"
+            .users-item__icon
+              = link_to user do
+                = gravatar_tag user, html: {class: "users-item__icon-image"}
+        .card-block
+          .description= simple_format truncate(user.description, length: 100)
