--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -1,2 +1,6 @@
-footer
-  = link_to "© FJORD, LLC", "http://fjord.jp"
+footer.footer
+  .container
+    .footer__copyright
+      i.fa.fa-copyright
+      = link_to "FJORD, LLC", "http://fjord.jp", class: "footer__copyright-link"
+      = Date.today.year
