--- a/app/views/feeds/index.html.slim
+++ b/app/views/feeds/index.html.slim
@@ -1,12 +1,24 @@
 - content_for :head_last do
   = auto_discovery_link_tag :atom, feeds_url(format: 'atom'), title: 'みんなのブログ'
-- @entries.each do |entry|
-  article.entry
-    h4= link_to entry.title, entry.url
-    - if entry.content.nil?
-      .content= raw entry.summary
-    - else
-      .content= raw entry.content
-    .published published at #{entry.published}
-    - if entry.author
-      .author posted by #{entry.author}
+header.page-header
+  .container
+    h1.page-header__title みんなのブログ
+
+.page-body
+  .container
+    - @entries.each do |entry|
+      article.entry
+        header.entry-header
+          = link_to entry.url, class: "entry__header-title-link" do
+            h3.entry-header__title
+              = entry.title
+            ul.entry-header__meta-items
+              li.entry-header__meta-item.is-published
+                | published at #{entry.published}
+              - if entry.author
+                li.entry-header__meta-item.is-author posted by #{entry.author}
+        .entry-body
+          - if entry.content.nil?
+            .is-long-text-style= raw entry.summary
+          - else
+            .is-long-text-style= raw entry.content          
