--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -2,9 +2,13 @@
   .form-group
     = f.label :title
     = f.text_field :title, size: '10', class: 'form-control'
-  .form-group
-    = f.label :description
-    = f.text_area :description, size: '10x20', class: 'form-control'
+  .row
+    .col-sm-6
+      .form-group
+        = f.label :description
+        = f.text_area :description, class: 'form-control'
+    .col-sm-6
+      | プレビュー
   .form-group
     = f.label :goal
     = f.text_area :goal, size: '10x10', class: 'form-control'
@@ -13,3 +17,4 @@
     = f.collection_select :category_id, Category.all, :id, :name, {}, class: 'form-control'
   .form-group
     = f.submit nil, class: 'btn btn-primary'
+    = link_to "キャンセル", practice_path, class: "btn btn-secondary"
