--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,4 +1,10 @@
-.row
-  .col-xs-12.col-sm-6.col-sm-offset-3
-    h3= t('editing_user')
-    = render 'form', user: @user, companies: @companies
+header.page-header.is-margin-bottom-0
+  .container
+    h2.page-header__title
+      = t('editing_user')
+
+.page-body
+  .container
+    .row
+      .col-xs-12.col-sm-6.col-sm-offset-3
+        = render 'form', user: @user, companies: @companies
