Add error messages in Reports

--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -1,4 +1,6 @@
 = form_for practice do |f|
+  - if practice.errors.any?
+    = error_messages_for :practice
   .form-group
     = f.label :title
     = f.text_field :title, size: '10', :required => true, class: 'form-control'
