Add syntax highlight

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -6,5 +6,6 @@
 @import settings/helpers/**/*
 @import settings/costom-bootstrap//**/*
 @import base
-@import blocks/**/*
 @import node_modules/highlight.js/styles/github
+@import github
+@import blocks/**/*
