--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -4,16 +4,20 @@
   .form-group
     = f.label :title
     - if @report_flag == true
-      = f.text_field :title, size: '10', :required => true, class: 'form-control', value: '日報/' << @report_date.strftime("%Y/%m/%d/") << @user_name << ':'
+      = f.text_field :title, size: '10', class: 'form-control', value: '日報/' << @report_date.strftime("%Y/%m/%d/") << @user_name << ':'
     - else
       = f.text_field :title, size: '10', class: 'form-control'
   .row.js-markdown-parent
     .col-sm-6
       .form-group
         = f.label :description
-        = f.text_area :description, size: '10x20', :required => true, class: 'form-control js-markdown-input practices-edit__input'
+        = f.text_area :description, size: '10x20', class: 'form-control js-markdown-input practices-edit__input'
     .col-sm-6
       | プレビュー
       .js-markdown-preview.is-long-text-style.practices-edit__preview
   .form-group
     = f.submit nil, class: 'btn btn-primary btn-lg'
+    - if params[:action] == 'new' || params[:action] == 'create'
+      = link_to "キャンセル", reports_path, class: "btn btn-secondary"
+    - elsif params[:action] == 'edit' || params[:action] == 'update'
+      = link_to "キャンセル", report_path, class: "btn btn-secondary"
