--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -4,14 +4,14 @@
   .form-group
     = f.label :title
     - if @report_flag == true
-      = f.text_field :title, size: '10', class: 'form-control', value: '日報/' << @report_date.strftime("%Y/%m/%d/") << @user_name << ':'
+      = f.text_field :title, size: '10', class: 'form-control js-warning-form', value: '日報/' << @report_date.strftime("%Y/%m/%d/") << @user_name << ':'
     - else
-      = f.text_field :title, size: '10', class: 'form-control'
+      = f.text_field :title, size: '10', class: 'form-control js-warning-form'
   .row.js-markdown-parent
     .col-sm-6
       .form-group
         = f.label :description
-        = f.text_area :description, size: '10x20', class: 'form-control js-markdown-input practices-edit__input'
+        = f.text_area :description, size: '10x20', class: 'form-control  js-warning-form js-markdown-input practices-edit__input'
     .col-sm-6
       | プレビュー
       .js-markdown-preview.is-long-text-style.practices-edit__preview
