--- a/app/assets/stylesheets/blocks/_user.sass
+++ b/app/assets/stylesheets/blocks/_user.sass
@@ -10,6 +10,7 @@
   +position(absolute, left -16px, top -6px)
   +size(64px)
   border: solid #1E88E5 4px
+  background-color: white
 .users-item__name-link
   color: $reversal-text
   font-weight: bold
