--- a/app/assets/stylesheets/settings/variables/_bootstrap.sass
+++ b/app/assets/stylesheets/settings/variables/_bootstrap.sass
@@ -17,7 +17,7 @@ $enable-grid-classes: true
 
 $spacer: 1rem
 $spacer-x: $spacer
-$spacer-y: $spacer
+$spacer-y: 0
 $spacers: (0: (x: 0, y: 0), 1: (x: $spacer-x, y: $spacer-y), 2: (x: $spacer-x * 1.5, y: $spacer-y * 1.5), 3: (x: $spacer-x * 3, y: $spacer-y * 3))
 
 $border-width: 1px
