--- a/app/assets/stylesheets/blocks/_page.sass
+++ b/app/assets/stylesheets/blocks/_page.sass
@@ -4,7 +4,12 @@
   background-color: #1E88E5
   +padding(vertical, 1.4rem)
   margin-bottom: 2rem
+.page-header__container
+  +position(relative)
 .page-header__title
   +text-block(1.8rem 1.4, white)
   img
     +size(40px, auto)
+.page-header__button
+  +position(absolute, right 0, top 50%)
+  margin-top: -16px
