--- a/app/assets/stylesheets/blocks/_report.sass
+++ b/app/assets/stylesheets/blocks/_report.sass
@@ -2,6 +2,7 @@
   background-color: $base-color
   padding: 2rem 2rem 2rem 188px
   +position(relative)
+  min-height: 20rem
 .report__header
   +position(absolute, left 0, top 0)
   +size(160px, 100%)
