--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -3,6 +3,7 @@
   background-color: $background-color
   transition: all .4s
   right: 0
+  padding-left: $global-nav-width
   &.is-opened-drawer
     overflow: hidden
     right: 280px
