--- a/app/assets/stylesheets/blocks/_page.sass
+++ b/app/assets/stylesheets/blocks/_page.sass
@@ -1,13 +1,11 @@
-.page
-  min-height: 90vh
 .page-header
-  background-color: #1E88E5
+  background-color: $base-color
   +padding(vertical, 1.4rem)
   margin-bottom: 2rem
 .page-header__container
   +position(relative)
 .page-header__title
-  +text-block(1.8rem 1.4, white)
+  +text-block(1.8rem 1.4, #65A9A9)
   img
     +size(40px, auto)
 .page-header__button
