--- a/app/assets/stylesheets/settings/variables/_card.sass
+++ b/app/assets/stylesheets/settings/variables/_card.sass
@@ -1,13 +1,12 @@
 // Cards
 $card-spacer-x: 1.25rem
-$card-spacer-y: 0.75rem
+$card-spacer-y: 2rem
 $card-border-width: 0
 $card-border-radius: $border-radius-reset
 $card-border-color: #e5e5e5
 $card-border-radius-inner: $card-border-radius
-$card-cap-bg: #1E88E5
+$card-cap-bg: #65a9a9
 $card-bg: #fff
 
 $card-link-hover-color: #fff
-
 $card-deck-margin: 0.625rem
