--- a/app/assets/stylesheets/settings/variables/_sanitize.sass
+++ b/app/assets/stylesheets/settings/variables/_sanitize.sass
@@ -2,7 +2,7 @@ $root-background-color: $background-color
 $root-box-sizing: border-box
 $root-color: $text
 $root-cursor: default
-$root-font-family: sans-serif
+$root-font-family: $font-family-sans-serif
 $root-font-size: 100%
 $root-line-height: 1.5
 $root-text-rendering: optimizeLegibility
@@ -15,7 +15,7 @@ $media-element-vertical-align: middle
 $monospace-font-family: monospace
 $nav-list-style: none
 $selection-background-color: #B3D4FC
-$selection-color: #ffffff
+$selection-color: #444
 $selection-text-shadow: none
 $small-font-size: 75%
 $table-border-collapse: collapse
