--- a/app/views/feeds/index.html.slim
+++ b/app/views/feeds/index.html.slim
@@ -2,7 +2,7 @@
   = auto_discovery_link_tag :atom, feeds_url(format: 'atom'), title: 'みんなのブログ'
 header.page-header
   .container
-    h1.page-header__title みんなのブログ
+    h1.page-header__title= t('our_blogs')
 
 .page-body
   .container
