--- a/app/assets/stylesheets/_bootstrap-import.sass
+++ b/app/assets/stylesheets/_bootstrap-import.sass
@@ -16,7 +16,7 @@
 //@import bootstrap/type
 @import bootstrap/images
 @import bootstrap/code
-@import bootstrap/grid
+//@import bootstrap/grid
 @import bootstrap/tables
 @import bootstrap/forms
 @import bootstrap/buttons
