--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -1,7 +1,7 @@
 $main-color: #b9d5da
 $accent-color: blue
 $base-color: white
-$background-color: #eee
+$background-color: #e1efed
 $reversal-text: white
 $text: #272b2d
 
@@ -12,7 +12,10 @@ $gray-lighter: #eceeef
 $gray-lightest: #f7f7f9
 
 $brand-primary: #6b9bcd
-$brand-success: #98c96c
+$brand-success: #27944A
 $brand-info: #7ac3d3
 $brand-warning: #d1d353
 $brand-danger: #dd6583
+
+$global-nav-height: 44px
+$global-nav-width: 8rem
