--- a/app/assets/stylesheets/settings/variables/_bootstrap.sass
+++ b/app/assets/stylesheets/settings/variables/_bootstrap.sass
@@ -64,7 +64,7 @@ $grid-gutter-width: 1.875rem
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif
+$font-family-sans-serif: 'Noto Sans Japanese', "Helvetica Neue", Helvetica, Arial, sans-serif
 $font-family-serif: Georgia, "Times New Roman", Times, serif
 $font-family-monospace: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
 $font-family-base: $font-family-sans-serif
