Add comments in Reports

--- a/app/assets/stylesheets/blocks/_report.sass
+++ b/app/assets/stylesheets/blocks/_report.sass
@@ -23,3 +23,9 @@
   +margin(horizontal, -1rem)
 .report__body
   margin-bottom: 2rem
+.comment__body
+  margin-top: 2rem
+.comment__description
+  margin-top: 1rem
+.comment__form
+  margin-top: 1rem
