--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -11,13 +11,13 @@
     .col-sm-6
       .form-group
         = f.label :description
-        = f.text_area :description, size: '10x20', class: 'form-control  js-warning-form js-markdown-input practices-edit__input'
+        = f.text_area :description, size: '10x20', class: 'form-control js-warning-form js-markdown-input practices-edit__input'
     .col-sm-6
       | プレビュー
       .js-markdown-preview.is-long-text-style.practices-edit__preview
   .form-group
-    = f.submit nil, class: 'btn btn-primary btn-lg'
+    = f.submit nil, class: 'btn btn-primary btn-sm'
     - if params[:action] == 'new' || params[:action] == 'create'
-      = link_to "キャンセル", reports_path, class: "btn btn-secondary"
+      = link_to 'キャンセル', reports_path, class: 'btn btn-secondary btn-sm'
     - elsif params[:action] == 'edit' || params[:action] == 'update'
-      = link_to "キャンセル", report_path, class: "btn btn-secondary"
+      = link_to 'キャンセル', report_path, class: 'btn btn-secondary btn-sm'
