--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -24,4 +24,5 @@ header.page-header
                   = t('comments_count')
               .btn-group
                 = link_to t('edit'), edit_report_path(report), class: 'btn btn-primary'
+                = link_to t('copy'), new_report_path(report), class: 'btn btn-success'
                 = link_to t('destroy'), report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
