--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -24,8 +24,8 @@
     = f.label :category_id
     = f.collection_select :category_id, Category.all, :id, :name, {}, class: 'form-control'
   .form-group
-    = f.submit nil, class: 'btn btn-primary btn-lg'
+    = f.submit nil, class: 'btn btn-primary btn-sm'
     - if params[:action] == 'new' || params[:action] == 'create'
-      = link_to "キャンセル", practices_path, class: "btn btn-secondary"
+      = link_to "キャンセル", practices_path, class: "btn btn-secondary btn-sm"
     - elsif params[:action] == 'edit' || params[:action] == 'update'
-      = link_to "キャンセル", practice_path, class: "btn btn-secondary"
+      = link_to "キャンセル", practice_path, class: "btn btn-secondary btn-sm"
