--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -20,6 +20,7 @@ header.page-header
       footer.report__footer
         .btn-group
           = link_to t('edit'), edit_report_path(@report), class: 'btn btn-primary'
+          = link_to t('copy'), new_report_path(@report), class: 'btn btn-success'
           = link_to t('destroy'), report_path(@report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
           = link_to t('back'), reports_path, class: 'btn btn-secondary'
       h2.comment__body
