--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -13,7 +13,10 @@
     .col-sm-6
       .form-group
         = f.label :description
-        = f.text_area :description, size: '10x20', class: 'form-control js-warning-form js-markdown-input practices-edit__input', value: @report_description
+        - if @report_copy_flag == true
+          = f.text_area :description, size: '10x20', class: 'form-control js-warning-form js-markdown-input practices-edit__input', value: @report_description
+        - else
+          = f.text_area :description, size: '10x20', class: 'form-control js-warning-form js-markdown-input practices-edit__input'        
     .col-sm-6
       | プレビュー
       .js-markdown-preview.is-long-text-style.practices-edit__preview
